--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,6 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/iaoxos223/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/iaoxos223/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iaoxos223/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iaoxos223/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/iaoxos223/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799913.md#1" target="_blank">泰国现武汉肺炎第二病例 患者为中国女游客</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1192512290-150x120.jpg" align ="left"></a>1月17日，泰国新闻社消息，泰国出现第二个武汉肺炎病例，该患者是来自中国武汉的女游客。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 4:55 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781776.md#1" target="_blank">【独家】人民日报前副总编遭情夫之子举报</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/10/n11781776.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15eaaa1b234e1367_ttl7day7vG________1-150x120.jpg" align ="left"></a>中国大陆反腐上演了儿子举报父亲情妇、中共女高官的一幕。原人民日报社副总编马利（女）被指贪腐受贿，及非法同居、以权谋私等多项罪名，证据来自马利的微信记录和这对父子对她的日常观察。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 4:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11793721.md#1" target="_blank">传记《穿透阴霾的舞蹈》读后感</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/14/n11793721.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003031031131371-150x120.jpg" align ="left"></a>加籍华人张铁钧是中国第一流的舞蹈家和舞蹈教育家，加拿大皇家芭蕾舞学院唯一华裔舞蹈教授；但是她的传记，却由一位加拿大人，作家和制片人Agnes Bristow 执笔，这是我从未见过的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800036.md#1" target="_blank">中共纪检“内鬼”邱大明泄密收贿细节曝光</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800036.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/ne5-600x400-150x120.jpg" align ="left"></a>近年来，中共专责打虎的纪检系统频现“内鬼”。日前，吉林省纪委前副书记、省监察委员会前副主任邱大明的贪腐细节曝光，指其泄露工作机密、暗示商人花千万为其在京买房、收受巨额贿赂等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 2:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799432.md#1" target="_blank">《新闻拍案惊奇》观众Q&#038;A 如何注册会员？</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799432.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea8d324d5690fa_ttl7dayvm3_tn-small-2-150x120.jpg" align ="left"></a>《新闻拍案惊奇》观众Q&A，如何注册会员？人在大陆如何成为会员？会有隐私问题吗？会员区常见问题解答；节目内容调整：会员区增添新节目，非会员区内容不变，只会更好！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 2:03 PM							</td></tr>
@@ -23,7 +21,8 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798303.md#1" target="_blank">陕西男子失踪21年 知情人：油企打死多人</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798303.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/5995acf5ly1ganrof4pkyj20u014otc7-1-150x120.jpg" align ="left"></a>陕西延安宝塔区村民刘志斌因为向势力强大的采油厂索取占地赔偿，于21年前被乡政府官员绑走，从此人间蒸发；日前当局成立专案组调查；但知情人指出，结果并不乐观。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798732.md#1" target="_blank">【热点互动】第一阶段协议改变中美贸易模式</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea6d91e96f8955_ttl7daylsJ_9967409557cf7331-150x120.jpg" align ="left"></a>历经两年贸易战，美中周三（1月15日）终于签署第一阶段协议。协议内容包括中方两年内加购2000亿美元美国商品，以及知识产权保护及开放金融的条款。川普总统称这是一份有“全面执行力”的协议。本期节目邀请专家分析协议内容，影响执行的因素，及美中贸易战下一步的走向。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798885.md#1" target="_blank">为吴花燕募捐百万转交两万？医院：没收到</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f2416e0c35c13c5bed63693a9d7fbc01-150x120.jpg" align ="left"></a>体重仅43斤的贵州女大学生吴花燕去世，揭开民政部旗下的募捐黑幕，民政部属下机构以吴花燕名义募捐百万，仅转出两万给医院。然而最新的报导显示，医院就连这两万都没有收到。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 4:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11800373.md#1" target="_blank">一周喝两次珍珠奶茶 河南男童患肠梗阻</a><br></h3>近日，河南新乡一名13岁男童因腹痛难忍被送入急诊，经检查是肠梗阻现象。医生了解到，男童病发前一周内喝过两次珍珠奶茶，并且其没有充分咀嚼珍珠。经手术，男童肠道里的异物三天后排出。医生建议，家长应少给孩子喝奶茶。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11797867.md#1" target="_blank">2019年 遭中共迫害的社会精英人士</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11797867.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-5-150x120.jpg" align ="left"></a>据明慧网信息统计，2019年至少21名修炼法轮功的社会精英被迫害致死，45人被非法判刑，42人被非法庭审，132人被绑架，72人被骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798702.md#1" target="_blank">华盛顿加大力度 促台积电在美生产芯片</a><br></h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/e58d679d6a9d46a8f54c4ebf9bb07ad3-150x120.jpg" align ="left"></a>消息人士告诉《日经新闻》，为确保高安全性芯片的生产不受中共干扰，华盛顿在加大力度、敦促台积电在美国生产军用芯片。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799783.md#1" target="_blank">贸易协议严打仿冒及盗版 淘宝拼多多受关注</a><br></h3>中美第一阶段经贸协议将更加严格地打击电商平台的假冒和盗版问题，措施包括吊销平台网络经营许可。中国大陆电商平台的假货问题引发关注。大陆电商平台淘宝网和拼多多，都曾因打假不力被美国贸易代表办公室（USTR）列入“恶名市场”。
 
 1月16日中共财政部发布了中美第一阶段经贸协议，协议规定，针对未能采取必要措施整治知识产权侵权的主要电子商务平台，双方应采取有效行动.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:15 PM							</td></tr>
@@ -31,5 +30,6 @@
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799721.md#1" target="_blank">一塑料船在长江翻沉 5人下落不明</a><br></h3>1月16日凌晨，一艘小型“三无”塑料船在长江上翻沉，船上5人下落不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/17/n11799448.md#1" target="_blank">中共政治局会议后 地方高层传人事异动</a><br></h3>1月16日，中共举行了今年首次的政治局会议。该会议还循例“研究其他事项”。有港媒报导说，该会议结束后就传出高层人事变动的消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 11:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11797451.md#1" target="_blank">分析：习今年外访集中在周边的原因</a><br></h3>近年来，习近平密集地连续长时间走访五大洲，而今年其外访大多集中于周边国家。有港媒分析了其外访“不远行”的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:24 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/20/1/16/n11798549.md#1" target="_blank">原北京师范大学研究生陶渊  陷冤狱遭迫害</a><br></h3>原北京师范大学研究生、法轮功学员陶渊于2014年4月29日在浙江嘉兴市上班途中被嘉兴市经开区公安局非法抓捕，后被非法判刑4年，在浙江省第四监狱医院监区严管分监区遭受残忍迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/iaoxos223/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/iaoxos223/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/iaoxos223/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
